--- a/repos/templates/repository/blocks/stats_widgets.html
+++ b/repos/templates/repository/blocks/stats_widgets.html
@@ -36,23 +36,25 @@
                             <a  href="{% url 'repo-devs-list' repository.id %}" >
                             {% icon_box "col-md-3" "fas fa-users text-info" "description text-info" devs_count|intcomma 'devs' %}
                             </a>
-                            {% big_text_box 'col-md-3' 'fas fa-bus' 'big-text text-danger' 'description text-danger' bus_factor|intcomma 'bus factor' %}
+                            {% big_text_box 'col-md-3' 'fa fa-files-o' 'big-text text-white' 'description' file_count|intcomma 'files'%}
                             {% big_text_box 'col-md-3' 'fas fa-stream text-success' 'big-text text-success' 'description' commit_count|intcomma 'commits' %}
                             {% big_text_box 'col-md-3' 'fas fa-edit' 'big-text text-primary' 'description text-primary' file_changes_count|intcomma 'changes' %}
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="row">
-                            {% big_text_box 'col-md-4' 'fa fa-code' 'big-text text-warning' 'description text-warning' loc|intcomma 'lines of code'%}
+                            {% big_text_box 'col-md-3' 'fa fa-code' 'big-text text-warning' 'description text-warning' loc|intcomma 'lines of code'%}
                             <a href="{% url 'file-list-repo' repository.id %}">
-                                {% big_text_box 'col-md-4' 'fa fa-files-o' 'big-text text-white' 'description' file_count|intcomma 'files'%}
                             </a>
+                            {% big_text_box 'col-md-3' 'fas fa-laptop-code' 'big-text text-white' 'description' lang_count|intcomma 'languages'%}
+                            {% big_text_box 'col-md-3' 'fas fa-bus' 'big-text text-danger' 'description text-danger' bus_factor|intcomma 'bus factor' %}
+
                             {% if file_count > 0 %}
                                 {% with hotspots_count|div:file_count|mul:100|floatformat:1 as p %}
-                                {% big_text_box 'col-md-4' 'fa fa-fire' 'big-text text-danger' 'description text-danger' p|add:"%" 'Red Hot Spots' %}
+                                {% big_text_box 'col-md-3' 'fa fa-fire' 'big-text text-danger' 'description text-danger' p|add:"%" 'Red Hot Spots' %}
                                 {% endwith %}
                             {% else %}
-                                {% big_text_box 'col-md-4' 'fa fa-fire' 'big-text text-danger' 'description text-danger' "0.0 %" 'Red Hot Spots' %}
+                                {% big_text_box 'col-md-3' 'fa fa-fire' 'big-text text-danger' 'description text-danger' "0.0 %" 'Red Hot Spots' %}
                             {% endif %}
                         </div>
                     </div>
