--- a/repos/templates/repository/blocks/scripts.html
+++ b/repos/templates/repository/blocks/scripts.html
@@ -4,7 +4,7 @@
 <script>
 var data = [
     {%for k in knowledge%}
-        {id:"{{k.author__name}}", value: {{k.knowledge}} },
+        {id:"{{k.author__name}}", value: {{ k.knowledge_sum }} },
     {%endfor%}
 ];
 $("#kmap").height($("#hotspots-chart").width()/2);
@@ -13,7 +13,7 @@ new d3plus.viz()
     .container("#kmap")
     .data(data)
     .type("tree_map")
-     .id("id")
+     .id(["id"])
      .size("value")
     .labels({"align": "left", "valign": "top"})
      .draw();
