fix bug on quadrant not showing impact

--- a/developers/templates/developers/dashboard.html
+++ b/developers/templates/developers/dashboard.html
@@ -209,6 +209,7 @@ var v_quadrant_data = [
             "cx": "{{qd.cx}}".replace(',', '.'),
             "cy": "{{qd.cy}}".replace(',', '.'),
             "size": "{{qd.size}}".replace(',', '.'),
+            "impact": "{{qd.impact}}".replace(',', '.'),
             "weight1": "{{qd.weight1}}".replace(',', '.'),
             "weight2": "{{qd.weight2}}".replace(',', '.'),
             "developer_id": {{ qd.developer_id }}
