--- a/repos/templates/repository/blocks/stats_widgets.html
+++ b/repos/templates/repository/blocks/stats_widgets.html
@@ -46,8 +46,8 @@
                     <div class="col-md-6">
                         <div class="row">
                             {% big_text_box 'col-md-3' 'fa fa-code' 'big-text text-warning' 'description text-warning' loc|intcomma 'lines of code'%}
-                            {% big_text_box 'col-md-3' 'fa fa-donate' 'big-text text-success' 'description text-success' development_cost|intcomma|floatformat:1 'development hours'%}
-                            {% big_text_box 'col-md-3' 'fa fa-wrench' 'big-text text-warning' 'description text-warning' remediation_cost|intcomma|floatformat:1 'remediation cost'%}
+                            {% big_text_box 'col-md-3' 'fa fa-donate' 'big-text text-success' 'description text-success' development_cost|floatformat:1 'development hours'%}
+                            {% big_text_box 'col-md-3' 'fa fa-wrench' 'big-text text-warning' 'description text-warning' remediation_cost|floatformat:1 'remediation cost'%}
                             {% big_text_box 'col-md-3' 'fa fa-file-code' 'big-text text-white' 'description text-white' tech_debt_ratio|floatformat:1|add:'%' 'tech debt ratio'%}
 
                         </div>
