--- a/static/css/application.css
+++ b/static/css/application.css
@@ -19349,7 +19349,7 @@ svg .title {
 }
 
 /**
- * setting correct urls
+ * setting correct urls.py
  */
 .select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice .select2-arrow b {
   background-image: url("../lib/select2/select2.png");
